--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -1,4 +1,26 @@
 <h1> List of Students </h1>
 
-<h3> Total students: <%= @students.length %> </h3>
+<h3> Total students: <%= @students_count %> </h3>
 
+<ul> <% @students.each do |s| %>
+	<li> <a href= <%= "/students/#{s.id}" %> > <%= s.firstname %> <%= s.lastname %> </a> </li> <br>
+	<% end %>
+</ul>
+
+<div>
+ 	<%= form_for(:student) do |f| %>
+		<%= f.label :email %>
+		<%= f.text_field :email %> <br><br>
+
+		<%= f.label :firstname %>
+		<%= f.text_field :firstname %> <br><br>
+
+		<%= f.label :lastname %>
+		<%= f.text_field :lastname %> <br><br>		
+
+		<%= f.label :field %>
+		<%= f.text_field :field %> <br><br>		
+
+	  <%= f.submit "Create Student" %>
+	<% end %>
+</div>
