--- a/app/views/advisors/show.erb
+++ b/app/views/advisors/show.erb
@@ -1,4 +1,8 @@
 <h1> <%= @advisor.firstname %> <%= @advisor.lastname %> </h1>
 
-<div> University <%= @advisor.university %> </div>
-<div> Career <%= @advisor.field %> </div>
+<div> University <%= @advisor.university %> </div> <br>
+<div> Career <%= @advisor.field %> </div> <br>
+
+<div> <a href= /advisors/ > Back to Advisors </a> </div> <br>
+
+<div> <a href= / > Home </a> </div>
