--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -21,6 +21,8 @@
 		<%= f.label :field %>
 		<%= f.text_field :field %> <br><br>		
 
-	  <%= f.submit "Create Student" %>
+	  <%= f.submit "Create Student" %> <br><br>
 	<% end %>
 </div>
+
+<div> <a href= / > Home </a> </div>
