--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -1,3 +1,7 @@
 <h1> <%= @student.firstname %> <%= @student.lastname %> </h1>
 
-<div> Field of interest <%= @student.field %> </div>
+<div> Field of interest <%= @student.field %> </div> <br>
+
+<div> <a href= /students/ > Back to Students </a> </div> <br>
+
+<div> <a href= / > Home </a> </div>
