resolved root issue

--- a/app/views/advisors/show.erb
+++ b/app/views/advisors/show.erb
@@ -3,6 +3,8 @@
 <div> University <%= @advisor.university %> </div> <br>
 <div> Career <%= @advisor.field %> </div> <br>
 
+<div> <a href= <%= "/advisors/#{@advisor.id}/edit" %> > Edit Advisor Profile </a> </div> <br>
+
 <div> <a href= /advisors/ > Back to Advisors </a> </div> <br>
 
 <div> <a href= / > Home </a> </div>
