--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -2,6 +2,8 @@
 
 <div> Field of interest <%= @student.field %> </div> <br>
 
+<div> <a href= <%= "/students/#{@student.id}/edit" %> > Edit Student Profile </a> </div> <br>
+
 <div> <a href= /students/ > Back to Students </a> </div> <br>
 
 <div> <a href= / > Home </a> </div>
