added Users controller and view for sign up page

--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -12,6 +12,8 @@
   	
   	<p> Helping our students and career advisors to connect </p> <br><br>
 
+      <div> <a href= /users/new > Sign up </a> </div> <br><br>
+
   	<section>
   		<div> I am a student </div> <br><br>
       <div> <a href= /students/ > View all students </a> </div> <br><br>
