added CSS and student passwords

--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -1,4 +1,18 @@
-h1 {
-	font-family: Arial;
-	color: red;
+/*.main {
+	max-width: 600px;
+	margin: 0 auto;
+	-webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+*/
+
+h1, h2 {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #485992;
+}
+
+a, p, div {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #9d9f27;	
 }
