--- a/app/views/advisors/edit.erb
+++ b/app/views/advisors/edit.erb
@@ -1,4 +1,6 @@
-<h1> Edit Advisor Profile </h1>
+<section>
+	<h1> Edit Advisor Profile </h1>
+</section>
 
 <h3> <%= @advisor.firstname %> <%= @advisor.lastname %> </h3>
 
