--- a/app/views/advisors/show.erb
+++ b/app/views/advisors/show.erb
@@ -1,4 +1,6 @@
-<h1> <%= @advisor.firstname %> <%= @advisor.lastname %> </h1>
+<section>
+	<h1> <%= @advisor.firstname %> <%= @advisor.lastname %> </h1>
+</section>
 
 <div> University <%= @advisor.university %> </div> <br>
 <div> Career <%= @advisor.field %> </div> <br>
