--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,13 @@
 <html>
 <head>
   <title>Careerseve</title>
+  <link rel="stylesheet" href="assets/stylesheets/homepage.css">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<img src="http://kingsconnect.kcs.org.uk/uk/kcs/uploads/images/King's%20Connect%20Banner.jpg"
 <%= yield %>
 
 </body>
