--- a/app/views/students/show.erb
+++ b/app/views/students/show.erb
@@ -1,4 +1,6 @@
-<h1> <%= @student.firstname %> <%= @student.lastname %> </h1>
+<section>
+	<h1> <%= @student.firstname %> <%= @student.lastname %> </h1>
+</section>
 
 <div> Field of interest <%= @student.field %> </div> <br>
 
