--- a/app/views/advisors/index.erb
+++ b/app/views/advisors/index.erb
@@ -1,4 +1,6 @@
+<section>
 <h1> List of Advisors </h1>
+</section>
 
 <h3> Total advisors: <%= @advisors.count %> </h3>
 
@@ -7,23 +9,4 @@
 	<% end %>
 </ul>
 
-<div>
- 	<%= form_for(:advisor) do |f| %>
-		<%= f.label :email %>
-		<%= f.text_field :email %> <br><br>
-
-		<%= f.label :firstname %>
-		<%= f.text_field :firstname %> <br><br>
-
-		<%= f.label :lastname %>
-		<%= f.text_field :lastname %> <br><br>		
-
-		<%= f.label :field %>
-		<%= f.text_field :field %> <br><br>		
-
-		<%= f.label :university %>
-		<%= f.text_field :university %> <br><br>
-
-	  <%= f.submit "Create Advisor" %>
-	<% end %>
 </div>
