--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -1,4 +1,6 @@
+<section>
 <h1> List of Students </h1>
+</section>
 
 <h3> Total students: <%= @students_count %> </h3>
 
@@ -7,22 +9,6 @@
 	<% end %>
 </ul>
 
-<div>
- 	<%= form_for(:student) do |f| %>
-		<%= f.label :email %>
-		<%= f.text_field :email %> <br><br>
 
-		<%= f.label :firstname %>
-		<%= f.text_field :firstname %> <br><br>
-
-		<%= f.label :lastname %>
-		<%= f.text_field :lastname %> <br><br>		
-
-		<%= f.label :field %>
-		<%= f.text_field :field %> <br><br>		
-
-	  <%= f.submit "Create Student" %> <br><br>
-	<% end %>
-</div>
 
 <div> <a href= / > Home </a> </div>
