--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -6,21 +6,24 @@
 </head>
 	
 <body>
+
   	<header>
   		<h1> Welcome to the KCS Careers Evening site! </h1>
   	</header>
   	
   	<p> Helping our students and career advisors to connect </p> <br><br>
 
-      <div> <a href= /users/new > Sign up </a> </div> <br><br>
+  	<section class=main>
+      <h2> Sign up here </h2> <br><br>
+  		<div> <a href= /students/new > I am a student </a> </div> <br><br>
+      <div> <a href= /advisors/new > I am an advisor </a> </div><br><br>
+    </section>
+
+
 
   	<section>
-  		<div> I am a student </div> <br><br>
+      <h2> Existing user?  </h2> <br><br>
       <div> <a href= /students/ > View all students </a> </div> <br><br>
-	  </section>
-  	
-  	<section>
-  		<div> I am an advisor </div><br><br>
       <div> <a href= /advisors/ > View all advisors </a> </div> <br><br>
   	</section>
 
