mid-way refactoring into user class

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<img src="http://kingsconnect.kcs.org.uk/uk/kcs/uploads/images/King's%20Connect%20Banner.jpg"
+
+<a href= / > 
+<img src="http://kingsconnect.kcs.org.uk/uk/kcs/uploads/images/King's%20Connect%20Banner.jpg"/> </a>
+
+
 <%= yield %>
 
 </body>
