--- a/app/views/students/new.erb
+++ b/app/views/students/new.erb
@@ -14,7 +14,7 @@
 		<%= f.text_field :password_confirmation %> <br><br>
 
 		<%= f.label :firstname %>
-		<%= f.text_field :firstname %> <br><br>
+		<%= f.text_field :"First name" %> <br><br>
 
 		<%= f.label :lastname %>
 		<%= f.text_field :lastname %> <br><br>		
