--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -14,9 +14,7 @@
   	<p> Helping our students and career advisors to connect </p> <br><br>
 
   	<section class=main>
-      <h2> Sign up here </h2> <br><br>
-  		<div> <a href= /students/new > I am a student </a> </div> <br><br>
-      <div> <a href= /advisors/new > I am an advisor </a> </div><br><br>
+      <h2> <a href= /users/new > Sign up here </a> </h2> <br><br>
     </section>
 
 
