--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -5,7 +5,7 @@
 </section>
 
 <div>
- 	<%= form_for(:user) do |f| %>
+ 	<%= form_for(@user) do |f| %>
 		<%= f.label :email %>
 		<%= f.text_field :email %> <br><br>
 
