--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,8 @@
 <section>
-	<h1> <%= @user.firstname %> <%= @user.lastname %> </h1>
+	<h1> Hi, <%= @user.firstname %>! </h1>
 </section>
+
+<div> Thank you for signing up as a <%= @user.user_type %> </div> <br>
 
 <div> Field of interest <%= @user.field %> </div> <br>
 
