--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -21,6 +21,7 @@
 
   	<section>
       <h2> Existing user?  </h2> <br><br>
+      <div> <a href= /users/ > View all users </a> </div> <br><br>
       <div> <a href= /students/ > View all students </a> </div> <br><br>
       <div> <a href= /advisors/ > View all advisors </a> </div> <br><br>
   	</section>
