--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -2,9 +2,9 @@
 <h1> List of Members </h1>
 </section>
 
-<h3> Total members: <%= @users.count %> </h3>
+<h3> Total members: <%= @users_count %> </h3>
 
-<ul> <% @users.each do |s| %>
+<ul> <% @users.each do |u| %>
 	<li> <a href= <%= "/users/#{u.id}" %> > <%= u.firstname %> <%= u.lastname %> </a> </li> <br>
 	<% end %>
 </ul>
